Skip VM uninstallation steps if Crostini was not fully installed.

This CL skips parts of the uninstall flow if the Termina VM was not
installed. This occurs if installation and uninstallation occurs
offline.

BUG=884284

Change-Id: I7e669605844b0914948bde792f67891e55ad0e7a
Reviewed-on: https://chromium-review.googlesource.com/1233016
Reviewed-by: Timothy Loh <timloh@chromium.org>
Reviewed-by: Nicholas Verne <nverne@chromium.org>
Commit-Queue: Josh Pratt <jopra@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593787}
Former-commit-id: da5b445c45466936dea5c5b2331ed23773d2f62a