chrome/browser/chromeos/crostini/crostini_remover.cc
@@ -35,8 +35,14 @@ CrostiniRemover::~CrostiniRemover() = default;
 
 void CrostiniRemover::RemoveCrostini() {
   DCHECK_CURRENTLY_ON(content::BrowserThread::UI);
-  CrostiniManager::GetForProfile(profile_)->InstallTerminaComponent(
-      base::BindOnce(&CrostiniRemover::OnComponentLoaded, this));
+  if (CrostiniManager::GetForProfile(profile_)->IsCrosTerminaInstalled()) {
+    CrostiniManager::GetForProfile(profile_)->InstallTerminaComponent(
+        base::BindOnce(&CrostiniRemover::OnComponentLoaded, this));
+  } else {
+    // Crostini installation didn't install the component. Concierge should not
+    // be running, nor should there be any VMs.
+    CrostiniRemover::StopConciergeFinished(true);
+  }
 }
 
 void CrostiniRemover::OnComponentLoaded(ConciergeClientResult result) {
@@ -85,6 +91,7 @@ void CrostiniRemover::DestroyDiskImageFinished(ConciergeClientResult result) {
 }
 
 void CrostiniRemover::StopConciergeFinished(bool is_successful) {
+  DCHECK_CURRENTLY_ON(content::BrowserThread::UI);
   // The is_successful parameter is never set by debugd.
   auto* cros_component_manager =
       g_browser_process->platform_part()->cros_component_manager();
